<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:ignore="ContentDescription" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/close_button"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/del_label"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_set_thumbnail"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/close_button"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/set_as_thumbnail"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/close_button"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/close_label"
            android:textColor="@color/white" />
    </LinearLayout>

    <ImageView
        android:id="@+id/images"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

</LinearLayout>